Show visibility group when blog is privat. Small visual bugfixes.

--- a/client/app/sass/app.css
+++ b/client/app/sass/app.css
@@ -1968,25 +1968,28 @@ md-toast.md-error-toast-theme {
 #ely-blog-detail #ely-blog-detail-main {
   max-width: 600px;
   min-width: 300px; }
-  #ely-blog-detail #ely-blog-detail-main .blog-header {
+  #ely-blog-detail #ely-blog-detail-main .user-avatar {
     cursor: pointer; }
-    #ely-blog-detail #ely-blog-detail-main .blog-header .user-name {
-      line-height: 16px;
-      font-size: 14px;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis; }
-    #ely-blog-detail #ely-blog-detail-main .blog-header .blog-created {
-      display: inline-block;
-      margin-right: 8px;
-      line-height: 14px;
-      font-size: 12px;
-      color: rgba(0, 0, 0, 0.54); }
-    #ely-blog-detail #ely-blog-detail-main .blog-header .public-type {
-      font-size: 14px;
-      line-height: 16px;
-      font-weight: 500;
-      color: #3F51B5; }
+  #ely-blog-detail #ely-blog-detail-main .blog-header .user-name {
+    cursor: pointer;
+    line-height: 16px;
+    font-size: 14px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis; }
+  #ely-blog-detail #ely-blog-detail-main .blog-header .blog-created {
+    display: inline-block;
+    margin-right: 8px;
+    line-height: 14px;
+    font-size: 12px;
+    color: rgba(0, 0, 0, 0.54); }
+  #ely-blog-detail #ely-blog-detail-main .blog-header .public-type {
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 500;
+    color: #3F51B5; }
+    #ely-blog-detail #ely-blog-detail-main .blog-header .public-type .private-visible-type {
+      margin-right: 8px; }
   #ely-blog-detail #ely-blog-detail-main .button-settings-container {
     padding: 0; }
     #ely-blog-detail #ely-blog-detail-main .button-settings-container .button-settings {
@@ -2387,25 +2390,24 @@ md-toast.md-error-toast-theme {
   margin: 8px 0; }
   .pinwall-blog-card .user-avatar {
     cursor: pointer; }
-  .pinwall-blog-card .blog-header {
-    cursor: pointer; }
-    .pinwall-blog-card .blog-header .user-name {
-      line-height: 16px;
-      font-size: 14px;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis; }
-    .pinwall-blog-card .blog-header .blog-created {
-      display: inline-block;
-      margin-right: 8px;
-      line-height: 14px;
-      font-size: 12px;
-      color: rgba(0, 0, 0, 0.54); }
-    .pinwall-blog-card .blog-header .public-type {
-      font-size: 14px;
-      line-height: 16px;
-      font-weight: 500;
-      color: #3F51B5; }
+  .pinwall-blog-card .blog-header .user-name {
+    cursor: pointer;
+    line-height: 16px;
+    font-size: 14px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis; }
+  .pinwall-blog-card .blog-header .blog-created {
+    display: inline-block;
+    margin-right: 8px;
+    line-height: 14px;
+    font-size: 12px;
+    color: rgba(0, 0, 0, 0.54); }
+  .pinwall-blog-card .blog-header .public-type {
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 500;
+    color: #3F51B5; }
   .pinwall-blog-card .topic-description {
     padding: 0 16px; }
   .pinwall-blog-card .button-settings-container {
